--- a/rpm/harbour-sailTrivia.yaml
+++ b/rpm/harbour-sailTrivia.yaml
@@ -1,6 +1,6 @@
-Name: harbour-sailTrivia
+Name: harbour-sailtrivia
 Summary: SailTrivia - a simple trivia game
-Version: 0.1
+Version: 1.0
 Release: 1
 # The contents of the Group field should be one of the groups listed here:
 # https://github.com/mer-tools/spectacle/blob/master/data/GROUPS
