--- a/harbour-sailtrivia.desktop
+++ b/harbour-sailtrivia.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Type=Application
 X-Nemo-Application-Type=silica-qt5
-Icon=harbour-sailTrivia
-Exec=harbour-sailTrivia
+Icon=harbour-sailtrivia
+Exec=harbour-sailtrivia
 Name=SailTrivia
 # translation example:
 # your app name in German locale (de)
 #
 # Remember to comment out the following line, if you do not want to use
 # a different app name in German locale (de).
-Name[de]=harbour-sailTrivia
+# Name[de]=harbour-sailtrivia
