--- a/harbour-sailtrivia.desktop
+++ b/harbour-sailtrivia.desktop
@@ -10,3 +10,8 @@ Name=SailTrivia
 # Remember to comment out the following line, if you do not want to use
 # a different app name in German locale (de).
 # Name[de]=harbour-sailtrivia
+
+[X-Sailjail]
+OrganizationName=fi.pinniini
+ApplicationName=SailTrivia
+Permissions=Internet;
